--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "fontfaceobserver": "^1.5.1",
     "history": "1.17.0",
     "react": "^0.14.2",
+    "react-bootstrap": "^0.28.5",
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.3",
