--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^0.14.2",
     "react-bootstrap": "^0.28.5",
     "react-dom": "^0.14.2",
+    "react-overlays": "^0.6.3",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.3",
     "redux": "^3.0.0",
