--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-overlays": "^0.6.3",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.3",
+    "react-router-redux": "^4.0.2",
     "redux": "^3.0.0",
     "redux-thunk": "^1.0.0"
   },
@@ -28,6 +29,7 @@
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-react": "^6.0.0",
     "babel-preset-react-hmre": "1.0.1",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-2": "^6.0.0",
     "cross-env": "1.0.6",
     "css-loader": "^0.23.0",
