--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "",
   "dependencies": {
     "fontfaceobserver": "^1.5.1",
+    "halogen": "^0.2.0",
     "history": "2.1.1",
+    "immutable": "^3.8.1",
+    "mime": "^1.3.4",
     "react": "^15.0.2",
     "react-bootstrap": "^0.29.3",
     "react-dom": "^15.0.2",
+    "react-notification": "^5.0.4",
     "react-overlays": "^0.6.3",
     "react-redux": "^4.0.0",
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.2",
     "redux": "^3.0.0",
-    "redux-thunk": "^2.0.1"
+    "redux-thunk": "^2.0.1",
+    "reqwest": "^2.0.5"
   },
   "devDependencies": {
     "appcache-webpack-plugin": "^1.2.0",
@@ -44,6 +49,7 @@
     "ip": "1.1.3",
     "json-loader": "^0.5.2",
     "jsx-loader": "^0.13.2",
+    "memory-fs": "^0.3.0",
     "mocha": "^2.3.2",
     "object.assign": "^4.0.1",
     "postcss-focus": "^1.0.0",
@@ -55,6 +61,7 @@
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.1",
+    "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.11.0"
   },
   "repository": {
