--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,8 @@
     },
     "rules": {
         "comma-dangle": 0,
-        "indent": [2, 2, {"SwitchCase": 1}],
+        "indent": [2, 4],
+        "react/jsx-indent": [2, 4],
         "react/prop-types": 0
     }
 }
