--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "cssnano": "^3.0.1",
     "eslint": "^2.9.0",
     "eslint-config-airbnb": "9.0.0",
+    "eslint-plugin-import": "^1.8.0",
+    "eslint-plugin-jsx-a11y": "^1.2.0",
     "eslint-plugin-react": "^5.0.1",
     "expect": "^1.10.0",
     "extract-text-webpack-plugin": "1.0.1",
