--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "halogen": "^0.2.0",
     "history": "2.1.1",
     "immutable": "^3.8.1",
+    "lodash": "^4.12.0",
     "mime": "^1.3.4",
+    "pinyinlite": "^1.0.0",
     "react": "^15.0.2",
     "react-bootstrap": "^0.29.3",
     "react-dom": "^15.0.2",
