--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mime": "^1.3.4",
     "pinyinlite": "^1.0.0",
     "react": "^15.0.2",
+    "react-autosuggest": "^3.7.3",
     "react-bootstrap": "^0.29.3",
     "react-dom": "^15.0.2",
     "react-notification": "^5.0.4",
