--- a/.babelrc
+++ b/.babelrc
@@ -6,10 +6,11 @@
     "production": {
       "plugins": [
         "transform-react-remove-prop-types",
-        "transform-react-constant-elements",
-        "transform-react-inline-elements"
+        "transform-react-constant-elements"
+        /*"transform-react-inline-elements"*/
       ]
     }
   },
-  "presets": ["es2015", "react", "stage-2", "stage-0"]
+  "presets": ["react", "es2015", "stage-2", "stage-0"],
+  "passPerPreset": true
 }
