--- a/package.json
+++ b/package.json
@@ -81,6 +81,6 @@
     "build": "cross-env NODE_ENV=production webpack --config webpack.prod.config.js --progress --colors -p",
     "serve": "cross-env NODE_ENV=production node server.prod.js"
   },
-  "author": "Max Stoiber",
+  "author": "Yuanyi Wu",
   "license": "MIT"
 }
