--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^15.0.2",
     "react-autosuggest": "^3.7.3",
     "react-bootstrap": "^0.29.3",
+    "react-bootstrap-table": "^2.3.3",
     "react-dom": "^15.0.2",
     "react-notification": "^5.0.4",
     "react-overlays": "^0.6.3",
