--- a/.babelrc
+++ b/.babelrc
@@ -12,5 +12,6 @@
     }
   },
   "presets": ["react", "es2015", "stage-2", "stage-0"],
+  "plugins": ["transform-decorators-legacy"],
   "passPerPreset": true
 }
