--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "halogen": "^0.2.0",
     "history": "2.1.1",
     "immutable": "^3.8.1",
+    "jquery": "^2.2.4",
     "lodash": "^4.12.0",
     "mime": "^1.3.4",
     "pinyinlite": "^1.0.0",
-    "react": "^15.0.2",
+    "radium": "^0.17.1",
+    "react": "^15.1.0",
     "react-autosuggest": "^3.7.3",
     "react-bootstrap": "^0.29.3",
     "react-bootstrap-table": "^2.3.3",
-    "react-dom": "^15.0.2",
+    "react-dom": "^15.1.0",
     "react-notification": "^5.0.4",
     "react-overlays": "^0.6.3",
     "react-redux": "^4.0.0",
@@ -32,6 +34,7 @@
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.0.0",
     "babel-plugin-react-transform": "^2.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-constant-elements": "6.8.0",
     "babel-plugin-transform-react-inline-elements": "6.8.0",
     "babel-plugin-transform-react-remove-prop-types": "0.2.6",
@@ -40,6 +43,7 @@
     "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-2": "^6.0.0",
+    "copy-webpack-plugin": "^3.0.1",
     "cross-env": "1.0.7",
     "css-loader": "^0.23.1",
     "cssnano": "^3.0.1",
